# I_Chinese

./: CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: multi_platform_build.yml
assets/: i_chinese.db
include/db/: db.h
src/: CMakeLists.txt  main.c
src/db/: db.c
